<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_home"/>
        <item
                android:id="@+id/empleadosFragment"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_empleados"/>
        <item
                android:id="@+id/horariosFragment"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_horarios"/>
        <item
                android:id="@+id/asignarHorarioFragment"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_asignarhorarios"/>
        <item
                android:id="@+id/reportesFragment"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_reportes"/>
    </group>

    <item android:title="@string/titlecomunicacion">
        <menu>
            <group android:checkableBehavior="single">
                <item
                        android:id="@+id/terminosYCondicionesFragment"
                        android:icon="@drawable/ic_menu_slideshow"
                        android:title="@string/menu_terminosycondiciones"/>
                <item
                        android:id="@+id/contactoFragment"
                        android:icon="@drawable/ic_menu_slideshow"
                        android:title="@string/menu_contacto"/>
                <item
                        android:id="@+id/acercadeFragment"
                        android:icon="@drawable/ic_menu_slideshow"
                        android:title="@string/menu_acerca"/>
            </group>
        </menu>
    </item>

</menu>
