<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.empleados.EmpleadosFragment">

    <TextView
            android:id="@+id/titregistrar"
            android:text="@string/admin_control"
            android:textColor="@color/secundario1"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/roboto_bold"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



    <ScrollView
            android:layout_margin="20dp"
            android:layout_below="@+id/titregistrar"
            android:layout_width="match_parent"
            android:layout_height="400dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:id="@+id/subtit_pers"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/terciario2"
                    android:text="@string/personalfiles"
                    android:fontFamily="@font/roboto_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/lynames"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/appaterno"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/amaterno"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/nombre"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/lyaddres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:gravity="start"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:inputType="date"
                            android:hint="@string/nacimiento"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:inputType="phone"
                            android:hint="@string/phone"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"
                    app:counterTextColor="@color/primario1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        style="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:hint="@string/direccion"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/subtit_usr"
                    android:textColor="@color/terciario2"
                    android:text="@string/userfiles"
                    android:fontFamily="@font/roboto_black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:id="@+id/lyuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        app:counterEnabled="true"
                        app:counterMaxLength="15"
                        app:counterTextColor="@color/primario1"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/user"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/puesto"/>
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        <LinearLayout
                android:id="@+id/lypw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/primario2"
                    app:counterTextColor="@color/primario1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPassword"
                        style="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:hint="@string/pass"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/primario2"
                    app:counterTextColor="@color/primario1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:inputType="textPassword"
                        style="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:hint="@string/confirmpass"/>
            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>
            <LinearLayout
                    android:id="@+id/lyhl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:gravity="start"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:inputType="date"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/fecha_alta"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:theme="@style/TextInputLayoutWithPrimaryColorRegister"
                        android:gravity="end"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:inputType="date"
                            style="@style/TextInputLayoutWithPrimaryColorRegister"
                            android:hint="@string/fecha_baja"/>
                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>
            <CheckBox
                    android:layout_marginTop="25dp"
                    android:text="@string/administrador"
                    android:layout_width="300dp"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_medium"
                    android:textColor="@color/secundario2"
                    android:theme="@style/check_style"
                    android:layout_height="wrap_content" android:id="@+id/radioButton"/>
        </LinearLayout>


    </ScrollView>
    <Button
            android:background="@drawable/boton_rounded"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:text="@string/btnreg"
            android:textColor="@color/primario"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:padding="10dp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:onClick="Start"
            android:id="@+id/button"/>

</RelativeLayout>