<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
                android:background="@color/primario"
             tools:context=".ui.login.LoginFragment">


    <TextView
            android:background="@drawable/fondologin"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:id="@+id/txtbglogin"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/primario"
            android:textSize="25sp"
            android:fontFamily="@font/roboto_black"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:id="@+id/txtlogin"/>

    <androidx.cardview.widget.CardView
            app:cardBackgroundColor="@color/primario"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            app:cardCornerRadius="10dp"
            app:cardElevation="8dp"
            android:id="@+id/cardlogin"
            android:layout_centerInParent="true"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:counterEnabled="true"
                    app:counterMaxLength="20"
                    android:theme="@style/TextInputLayoutWithPrimaryColor"
                    android:id="@+id/inpusr">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/primario1"
                        android:hint="@string/user"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:padding="10dp"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/primario1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutWithPrimaryColor"
                    android:id="@+id/inppwr">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:fontFamily="@font/roboto_regular"
                        android:textColor="@color/primario1"
                        android:hint="@string/pass"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                    android:text="@string/ingres"
                    android:textColor="@color/primario"
                    android:textSize="18sp"
                    android:background="@drawable/boton_rounded"
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:onClick="Menu"
                    android:id="@+id/btnlogin"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:id="@+id/lyregistrar"
            android:orientation="horizontal"
            android:layout_width="300dp"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/nousr"
                android:textColor="@color/primario2"
                android:textSize="15sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:id="@+id/txtnousr"/>

        <TextView
                android:text="@string/regusr"
                android:textColor="@color/terciario3"
                android:textSize="15sp"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:onClick="onClick"
                android:id="@+id/txtgoreg"/>


    </LinearLayout>

</RelativeLayout>